# jot

./: README.md  jot.py  pyproject.toml  test_jot.py
