[tool.poetry]
name = "jot"
version = "0.1.0"
description = ""
authors = ["Jackson Fellows <jtfellows@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
