[project]
authors = [
    {name = "Jackson Fellows", email = "jtfellows@icloud.com"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "numpy<3.0.0,>=2.1.1",
    "isort<6.0.0,>=5.13.2",
    "scipy<2.0.0,>=1.14.1",
    "ipython<9.0.0,>=8.28.0",
]
name = "jot"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.3",
    "mypy<2.0.0,>=1.11.2",
]
